--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -10,7 +10,7 @@
 		position:absolute;
 		bottom:0;
 		width:100%;
-		z-index: 30;
+		z-index: 2;
 		//border-top:1px solid $smoke!important;
 		p,h1,h2,h3,h4,h5,h6,.icon,li,a {
 			color:$footer-font-color;
